<resources>
    <string name="app_name" translatable="false">Dispenser</string>
    <string name="dispenserapp" translatable="false">DispenserAPP</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="DispenserID">DispenserID</string>
    <string name="hour">Hour</string>
    <string name="minutes">Minutes</string>
    <string name="count">Count</string>
    <string name="periodicity">Periodicity</string>
    <string name="description">Description</string>

    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="scan_qr">Scan QR</string>
    <string name="add">Add</string>

    <string name="hours">Hours</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="error">Error</string>
    <string name="add_hour">Hour added successfully!</string>
    <string name="server_not_responding">Server not responding!</string>
    <string name="no_internet">No internet connection!</string>
    <string name="undefinied_error">Undefinied error!</string>
    <string name="update_hour">Hour updated successfully!</string>
    <string name="delete_hour">Hour deleted successfully!</string>
    <string name="Name_hint">Name (Optional)</string>
    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="doctor_account">Doctor account</string>
    <string name="validation_code">Validation code</string>
    <string name="wrong_validation_code">Wrong validation code!</string>
    <string name="dispenser_name">Dispenser name (optional)</string>
    <string name="dispenser_belongs">Dispenser belongs to the account!</string>
    <string name="add_dispenser">Dispenser added successfully!</string>
    <string name="wrong_email">Incorrect email address!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in_success">Registration was successful</string>
    <string name="wrong_password">Incorrect password!</string>
    <string name="wrong_cpassword">Password aren\'t the same!</string>
    <string name="no_history">No history to display!</string>
    <string name="no_hour">No hour to display! Add hours!</string>
    <string name="no_dispenser">You don\'t have any device. Add it now!</string>
    <string name="find_dispenser">Find dispenser!</string>
    <string name="wrong_login_password">Wrong login or password!</string>
    <string name="Days">Days</string>
    <string name="no_history_plans">This dispenser don\'t have any history or plans!</string>

</resources>
