<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".SignInActivity">

    <EditText
        android:id="@+id/EmailTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/whitehint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/whitehint"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/EmailTextBox"
        app:layout_constraintTop_toBottomOf="@+id/EmailTextBox" />

    <EditText
        android:id="@+id/DispenserIDTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="237dp"
        android:layout_marginBottom="237dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/DispenserID"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/whitehint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PasswordTextBox"
        app:layout_constraintStart_toStartOf="@+id/PasswordTextBox"
        app:layout_constraintTop_toTopOf="@+id/PasswordTextBox" />

    <Button
        android:id="@+id/QRScanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="fScanButton"
        android:text="@string/scan_qr"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/SignInButton"
        app:layout_constraintEnd_toEndOf="@+id/DispenserIDTextBox"
        app:layout_constraintStart_toEndOf="@+id/DispenserIDTextBox" />

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@android:color/transparent"
        android:onClick="fSignInButton"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/QRScanButton"
        app:layout_constraintTop_toBottomOf="@+id/DispenserIDTextBox" />

    <EditText
        android:id="@+id/NameTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/Name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/whitehint"
        app:layout_constraintEnd_toEndOf="@+id/PasswordTextBox"
        app:layout_constraintTop_toBottomOf="@+id/PasswordTextBox" />

</androidx.constraintlayout.widget.ConstraintLayout>